--- a/notebooks/congo_workbook_yearly.ipynb
+++ b/notebooks/congo_workbook_yearly.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "       'Eritrea', 'Togo', 'Gambia', 'Botswana', 'Djibouti'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "       'timestamp', 'iso3'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "       'Other-subnational-international'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "array([2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "       'Violence against civilians', 'Battles'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
     "                                            mode='markers',\n",
     "                                            name = str(year),\n",
     "                                            marker=go.scattermapbox.Marker(\n",
-    "                                                size=2,\n",
+    "                                                size=4,\n",
     "                                                color=yearly_colors[year].lower()\n",
     "                                        ),\n",
     "                                            text=congo_yearly_dfs[year]['sub_event_type'],\n",
@@ -288,7 +288,7 @@
     "    ),\n",
     ")\n",
     "\n",
-    "updatemenus = list([dict(active=-1, buttons=list(), pad = {'r': 0, 't': 10},\n",
+    "updatemenus = list([dict(active=-1, buttons=list(), pad = {'r': 0, 't': 8},\n",
     "                         x = 0.05,\n",
     "                         xanchor = 'left',\n",
     "                         y = 1.0,\n",
@@ -311,6 +311,39 @@
     "                                       args = [{'visible': [True] * len(yearly_traces)},\n",
     "                                               {'title': 'All Years'}]))\n",
     "\n",
+    "updatemenus.append(dict(\n",
+    "                        buttons=list([\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'dark'],\n",
+    "                                label='Dark',\n",
+    "                                method='relayout'\n",
+    "                            ),                    \n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'light'],\n",
+    "                                label='Light',\n",
+    "                                method='relayout'\n",
+    "                            ),\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'satellite'],\n",
+    "                                label='Satellite',\n",
+    "                                method='relayout'\n",
+    "                            ),\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'satellite-streets'],\n",
+    "                                label='Satellite with Streets',\n",
+    "                                method='relayout'\n",
+    "                            )                    \n",
+    "                        ]),\n",
+    "                        direction = 'up',\n",
+    "                        x = 0.75,\n",
+    "                        xanchor = 'left',\n",
+    "                        y = 0.05,\n",
+    "                        yanchor = 'bottom',\n",
+    "                        bgcolor = '#000000',\n",
+    "                        bordercolor = '#FFFFFF',\n",
+    "                        font = dict(size=11)\n",
+    "                    ))\n",
+    "\n",
     "data = [item[1] for item in yearly_traces]\n",
     "\n",
     "annotations = list([\n",
@@ -325,6 +358,134 @@
     "\n",
     "figure = dict(data=data, layout=layout)\n",
     "py.iplot(figure, filename='africa-conflict-dropdown')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearly_traces = []\n",
+    "yearly_annotations = []\n",
+    "\n",
+    "yearly_colors = {2010: \"#56137A\", 2011: \"#39A2AE\", 2012: \"#55DBCB\", 2013: \"#75E4B3\",\n",
+    "                 2014: \"#ED7D3A\", 2015: \"#8CD867\", 2016: \"#33CFA5\", 2017: \"#2FBF71\",\n",
+    "                 2018: \"#28AFB0\", 2019: \"#F34D35\", 2009: \"#EE964B\"}\n",
+    "\n",
+    "for year in congo_yearly_dfs:\n",
+    "    yearly_traces.append((year, go.Scattermapbox(\n",
+    "                                            lat=congo_yearly_dfs[year]['latitude'],\n",
+    "                                            lon=congo_yearly_dfs[year]['longitude'],\n",
+    "                                            mode='markers',\n",
+    "                                            name = str(year),\n",
+    "                                            marker=go.scattermapbox.Marker(\n",
+    "                                                size=4,\n",
+    "                                                color=yearly_colors[year].lower()\n",
+    "                                        ),\n",
+    "                                            text=congo_yearly_dfs[year]['sub_event_type'],\n",
+    "                                        )\n",
+    "                        ))\n",
+    "    \n",
+    "\n",
+    "\n",
+    "mapbox_access_token = os.environ['MAPBOX_KEY']\n",
+    "\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "    height = 600,\n",
+    "    margin = dict( t=0, b=0, l=0, r=0 ),\n",
+    "    mapbox=go.layout.Mapbox(\n",
+    "        accesstoken=mapbox_access_token,\n",
+    "        bearing=0,\n",
+    "        center=go.layout.mapbox.Center(\n",
+    "            lat=-4,\n",
+    "            lon=23\n",
+    "        ),\n",
+    "        pitch=0,\n",
+    "        zoom=4,\n",
+    "        style='dark'\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "updatemenus = list([dict(active=-1, buttons=list(), pad = {'r': 0, 't': 8},\n",
+    "                         x = 0.05,\n",
+    "                         xanchor = 'left',\n",
+    "                         y = 1.0,\n",
+    "                         yanchor = 'top',\n",
+    "                         bgcolor = '#AAAAAA',\n",
+    "                         bordercolor = '#FFFFFF',\n",
+    "                         font = dict(size=11, color='#000000'))])\n",
+    "\n",
+    "for index, item in enumerate(yearly_traces):\n",
+    "\n",
+    "    visibility_list = [False] * len(yearly_traces)\n",
+    "    visibility_list[index] = True\n",
+    "    updatemenus[0]['buttons'].append(dict(label = str(item[0]),\n",
+    "                                          method = 'update',\n",
+    "                                          args = [{'visible': visibility_list},\n",
+    "                                                   {'title': str(year)}]))\n",
+    "\n",
+    "updatemenus[0]['buttons'].append(dict(label = 'All',\n",
+    "                                       method = 'update',\n",
+    "                                       args = [{'visible': [True] * len(yearly_traces)},\n",
+    "                                               {'title': 'All Years'}]))\n",
+    "\n",
+    "updatemenus.append(dict(\n",
+    "                        buttons=list([\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'dark'],\n",
+    "                                label='Dark',\n",
+    "                                method='relayout'\n",
+    "                            ),                    \n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'light'],\n",
+    "                                label='Light',\n",
+    "                                method='relayout'\n",
+    "                            ),\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'satellite'],\n",
+    "                                label='Satellite',\n",
+    "                                method='relayout'\n",
+    "                            ),\n",
+    "                            dict(\n",
+    "                                args=['mapbox.style', 'satellite-streets'],\n",
+    "                                label='Satellite with Streets',\n",
+    "                                method='relayout'\n",
+    "                            )                    \n",
+    "                        ]),\n",
+    "                        direction = 'up',\n",
+    "                        x = 0.75,\n",
+    "                        xanchor = 'left',\n",
+    "                        y = 0.05,\n",
+    "                        yanchor = 'bottom',\n",
+    "                        bgcolor = '#000000',\n",
+    "                        bordercolor = '#FFFFFF',\n",
+    "                        font = dict(size=11)\n",
+    "                    ))\n",
+    "\n",
+    "data = [item[1] for item in yearly_traces]\n",
+    "\n",
+    "annotations = list([\n",
+    "    dict(text='Violent Conflicts in DRC (scroll to zoom)', font=dict(color='#fe4a49',size=14), borderpad=10, \n",
+    "         x=0.05, y=0.05, xref='paper', yref='paper', align='left', showarrow=False, bgcolor='black'),\n",
+    "    dict(text='Year', x=0.01, y=0.99, yref='paper', align='left', showarrow=False,font=dict(color='white',size=14))\n",
+    "])\n",
+    "\n",
+    "layout['updatemenus'] = updatemenus\n",
+    "layout['annotations'] = annotations\n",
+    "\n",
+    "\n",
+    "figure = dict(data=data, layout=layout)\n",
+    "py.iplot(figure, filename='drc-conflict-year-dropdown')\n",
     "\n"
    ]
   },
